--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -399,7 +399,7 @@ p {
   position: relative;
   height: 470px;
   padding-top: 49px;
-  background-image: url('../images/lace.jpg');
+  background-image: url('../images/flower.png');
   background-position: 50% 0px;
   background-size: auto;
 }
