--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -241,7 +241,7 @@ p {
   position: relative;
   z-index: 3;
   display: block;
-  padding: 35px;
+  padding: 25px;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, .12);
   -webkit-transition: background-color 300ms ease, color 300ms ease;
   transition: background-color 300ms ease, color 300ms ease;
@@ -401,7 +401,7 @@ p {
   padding-top: 30px;
   background-image: url('../images/flower.png');
   background-position: 50% 0px;
-  background-size: auto;
+  background-size: cover;
 }
 
 .content-section {
@@ -624,7 +624,7 @@ p {
 }
 
 .header-container {
-  padding-top: 345px;
+  padding-top: 100px;
 }
 
 .image {
