--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -858,5 +858,25 @@ p {
     display: block;
     margin-bottom: 17px;
   }
+  .collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  }
 }
 
