--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -858,25 +858,29 @@ p {
     display: block;
     margin-bottom: 17px;
   }
-  .collapsible {
+.accordion {
   background-color: #eee;
   color: #444;
   cursor: pointer;
   padding: 18px;
   width: 100%;
-  border: none;
   text-align: left;
+  border: none;
   outline: none;
-  font-size: 15px;
+  transition: 0.4s;
 }
-.active, .collapsible:hover {
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
   background-color: #ccc;
 }
-.content {
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
   padding: 0 18px;
+  background-color: white;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
-  }
+}
 }
 
