--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -863,7 +863,7 @@ p {
   color: #444;
   cursor: pointer;
   padding: 50px;
-  width: 100%;
+  width: auto;
   text-align: center;
   border: none;
   outline: none;
@@ -872,7 +872,7 @@ p {
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-  background-color: #ccc;
+  background-color: #FFFFFF;
 }
 
 /* Style the accordion panel. Note: hidden by default */
