--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -859,28 +859,84 @@ p {
     margin-bottom: 17px;
   }
 .accordion {
-  background-color: #333;
-  color: #444;
+  font-size: 1rem;
+  width: 30vw;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.accordion-header,
+.accordion-body {
+  background: white;
+}
+
+.accordion-header {
+  padding: 1.5em 1.5em;
+  background: #3F51B5;
+  text-transform: uppercase;
+  color: white;
   cursor: pointer;
-  padding: 50px;
-  width: 100%;
-  text-align: center;
-  border: none;
-  outline: none;
-  transition: 0.4s;
+  font-size: .8em;
+  letter-spacing: .1em;
+  transition: all .3s;
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-  background-color: #FFFFFF;
+.accordion-header:hover {
+  background: #2D3D99;
+  position: relative;
+  z-index: 5;
 }
 
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 50px;
-  background-color: white;
-  display: contents;
-  overflow: auto;
-}
+.accordion-body {
+  background: #fcfcfc;
+  color: #3f3c3c;
+  display: none;
 }
 
+.accordion-body__contents {
+  padding: 1.5em 1.5em;
+  font-size: .85em;
+}
+
+.accordion__item.active:last-child .accordion-header {
+  border-radius: none;
+}
+
+.accordion:first-child > .accordion__item > .accordion-header {
+  border-bottom: 1px solid transparent;
+}
+
+.accordion__item > .accordion-header:after {
+  content: "\f3d0";
+  font-family: IonIcons;
+  font-size: 1.2em;
+  float: right;
+  position: relative;
+  top: -2px;
+  transition: .3s all;
+  transform: rotate(0deg);
+}
+
+.accordion__item.active > .accordion-header:after {
+  transform: rotate(-180deg);
+}
+
+.accordion__item.active .accordion-header {
+  background: #2D3D99;
+}
+
+.accordion__item .accordion__item .accordion-header {
+  background: #f1f1f1;
+  color: black;
+}
+
+@media screen and (max-width: 1000px) {
+  body {
+    padding: 1em;
+  }
+  
+  .accordion {
+    width: 100%;
+  }
+ }
+}
