--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -24,14 +24,12 @@ h2 {
 
 h3 {
   margin: 10px 0px;
-  font-size: 24px;
   line-height: 30px;
   font-weight: 700;
 }
 
 h4 {
   margin: -10px 0px 20px;
-  font-size: 16px;
   line-height: 24px;
 }
 
@@ -113,11 +111,20 @@ p {
   line-height: 60px;
   font-weight: 400;
 }
-
-.big-tagline {
-  margin-bottom: 40px;
+.big-taglineindex {
+  margin-top: 40px;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 40px;
+  line-height: 60px;
+  font-weight: 300;
+}
+
+.big-tagline {
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 34px;
   line-height: 60px;
   font-weight: 300;
 }
@@ -241,7 +248,7 @@ p {
   position: relative;
   z-index: 3;
   display: block;
-  padding: 30px;
+  padding: 22.25px;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, .12);
   -webkit-transition: background-color 300ms ease, color 300ms ease;
   transition: background-color 300ms ease, color 300ms ease;
@@ -390,7 +397,6 @@ p {
 
 .thumbnail {
   margin-right: 10px;
-  padding: 4px;
   border: 1px solid rgba(0, 0, 0, .09);
   background-color: #fcfcfc;
 }
