--- a/css/nikki-c.webflow.css
+++ b/css/nikki-c.webflow.css
@@ -111,7 +111,7 @@ p {
   line-height: 60px;
   font-weight: 400;
 }
-.big-taglinemain {
+.main-tagline {
   margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
